--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "concurrently": "^5.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -22,5 +23,8 @@
   },
   "devDependencies": {
     "nodemon": "^1.19.3"
+  },
+  "engines": {
+    "node": ">=10.0.0"
   }
 }
