--- a/argon-client/package.json
+++ b/argon-client/package.json
@@ -43,7 +43,9 @@
     "not op_mini all"
   ],
   "dependencies": {
+    "axios": "^0.19.2",
     "chart.js": "2.7.3",
+    "cheerio": "^1.0.0-rc.3",
     "classnames": "2.2.6",
     "http-proxy-middleware": "^0.20.0",
     "moment": "2.24.0",
@@ -55,9 +57,12 @@
     "react-datetime": "2.16.3",
     "react-dom": "16.8.4",
     "react-google-maps": "9.4.5",
+    "react-redux": "^7.2.0",
     "react-router-dom": "4.3.1",
     "react-scripts": "2.1.8",
-    "reactstrap": "7.1.0"
+    "reactstrap": "7.1.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@types/googlemaps": "3.30.18",
