--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "scripts": {
     "start": "node server.js",
     "server": "nodemon server.js",
-    "dev": "concurrently \"npm run server\" \"npm run start --prefix argon-client\" "
+    "debug": "ndb server.js",
+    "dev": "concurrently \"npm run server\" \"npm run start --prefix argon-client\" ",
+    "dev2": "concurrently \"npm run debug\" \"npm run start --prefix argon-client\" "
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "concurrently": "^5.1.0",
