--- a/argon-client/package.json
+++ b/argon-client/package.json
@@ -44,30 +44,31 @@
   ],
   "dependencies": {
     "axios": "^0.19.2",
-    "chart.js": "2.7.3",
+    "chart.js": "2.9",
     "cheerio": "^1.0.0-rc.3",
     "classnames": "2.2.6",
-    "http-proxy-middleware": "^0.20.0",
+    "http-proxy-middleware": "1",
     "moment": "2.24.0",
     "node-sass": "^4.13.1",
     "nouislider": "13.1.1",
     "react": "16.8.4",
-    "react-chartjs-2": "2.7.4",
-    "react-copy-to-clipboard": "5.0.1",
+    "react-chartjs-2": "2.9",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-datetime": "2.16.3",
-    "react-dom": "16.8.4",
+    "react-dom": "^16.13.0",
     "react-google-maps": "9.4.5",
     "react-redux": "^7.2.0",
-    "react-router-dom": "4.3.1",
-    "react-scripts": "2.1.8",
-    "reactstrap": "7.1.0",
+    "react-router-dom": "5",
+    "react-scripts": "3.4",
+    "reactstrap": "8.4",
     "redux": "^4.0.5",
+    "redux-form": "^8.3.1",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@types/googlemaps": "3.30.18",
     "@types/markerclustererplus": "2.1.33",
     "@types/react": "16.8.7",
-    "typescript": "3.3.3333"
+    "typescript": "^3.8.3"
   }
 }
