--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.15",
     "mongoose": "^5.7.11",
     "morgan": "^1.9.1",
+    "ndb": "^1.1.5",
     "validator": "^12.1.0"
   },
   "devDependencies": {
