--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^5.7.11",
     "morgan": "^1.9.1",
     "ndb": "^1.1.5",
+    "puppeteer": "^5.1.0",
     "validator": "^12.1.0"
   },
   "devDependencies": {
